--- a/src/main/resources/templates/register/register.html
+++ b/src/main/resources/templates/register/register.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登録フォーム</title>
+    <title>GCG | 登録フォーム</title>
+    <link rel="icon" type="image/png" href="/images/registration/image.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
