--- a/src/main/resources/templates/students/student-update.html
+++ b/src/main/resources/templates/students/student-update.html
@@ -782,8 +782,9 @@
           <div class="tab-pane fade" id="interview" role="tabpanel" aria-labelledby="interview-tab">
             <div class="card shadow-sm border-0">
               <div class="card-body">
-                <form th:action="@{/students/update-interview/{id}(id=${student.id})}" th:object="${student.interviewNotes}" method="post" id="interviewForm">
-                  <input type="hidden" th:if="${student.interviewNotes != null}" th:field="*{id}"/>
+                <form th:action="@{/students/update-interview/{id}(id=${student.id})}" 
+                      th:object="${interviewNotes}" method="post" id="interviewForm">
+                  <input type="hidden" th:if="${interviewNotes != null}" th:field="*{id}"/>
                   
                   <div class="mb-4">
                     <h5 class="border-bottom pb-2 mb-3">
@@ -837,7 +838,7 @@
                         <i class="fas fa-times me-2"></i>キャンセル
                       </button>
                       <button type="submit" class="btn btn-primary px-4">
-                          <i class="fas fa-save me-2"></i>更新
+                        <i class="fas fa-save me-2"></i>更新
                       </button>
                     </div>
                   </div>
@@ -845,8 +846,6 @@
               </div>
             </div>
           </div>
-        </div> 
-
         </main>
       </div> 
     </div> 
