--- a/src/main/resources/templates/register/success.html
+++ b/src/main/resources/templates/register/success.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GCG | 登録完了</title>
-    <link rel="icon" type="image/png" href="/images/registration/image.png">
+    <link rel="icon" type="image/png" href="/images/image.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
@@ -32,7 +32,10 @@
                     </div>
                 </div>
                 
-                <a href="/register" class="btn btn-primary btn-lg　rounded px-3">新規登録</a>
+                <div class="d-flex justify-content-center gap-2">
+                    <a href="/register" class="btn btn-secondary btn-lg rounded py-1 px-3">新規登録</a>
+                    <a href="/" class="btn btn-primary btn-lg rounded py-1 px-3">ホーム</a>
+                </div>
             </div>
         </div>
     </div>
